--- a/charts/node/templates/hook-create-keys.yaml
+++ b/charts/node/templates/hook-create-keys.yaml
@@ -9,6 +9,9 @@ metadata:
     "helm.sh/hook": post-install
     "helm.sh/hook-weight": "-5"
     "helm.sh/hook-delete-policy": hook-succeeded, hook-failed
+    {{- with .Values.hook.extraAnnotations }}
+    {{- toYaml . | nindent 4 }}
+    {{- end }}
 spec:
   template:
     metadata:
