--- a/charts/node/tests/node_test.yaml
+++ b/charts/node/tests/node_test.yaml
@@ -15,3 +15,22 @@ tests:
     asserts:
       - notExists:
           path: spec.volumeClaimTemplates
+  - it: should add resources if set
+    set:
+      node.resources:
+        limits:
+          cpu: 100m
+          memory: 100Mi
+        requests:
+          cpu: 100m
+          memory: 100Mi
+    asserts:
+      - equal:
+          path: spec.template.spec.containers[0].resources
+          value:
+            limits:
+              cpu: 100m
+              memory: 100Mi
+            requests:
+              cpu: 100m
+              memory: 100Mi
