fix(node): don't create cli if archive

--- a/charts/node/templates/cli-deployment.yaml
+++ b/charts/node/templates/cli-deployment.yaml
@@ -1,4 +1,4 @@
-{{- if .Values.cli.enabled }}
+{{- if and (eq .Values.common.role "validator") .Values.cli.enabled }}
 apiVersion: apps/v1
 kind: Deployment
 metadata:
