--- a/charts/node/templates/engine-cm.yaml
+++ b/charts/node/templates/engine-cm.yaml
@@ -1,5 +1,5 @@
 {{- if and (eq .Values.common.role "validator") (eq .Values.engine.settings.existingConfigMap "") }}
-{{- $node_endpoint := printf "ws://%s:%s" (include "chainflip-node.fullname" .) .Values.node.ports.ws -}}
+{{- $node_endpoint := printf "ws://%s:%s" (include "chainflip-node.fullname" .) .Values.node.ports.rpc -}}
 apiVersion: v1
 kind: ConfigMap
 metadata:
