fix: add tests for ingress

--- a/charts/node/values.yaml
+++ b/charts/node/values.yaml
@@ -133,6 +133,13 @@ node:
     # -- chainflip-node service annotations
     annotations: {}
 
+  ingress:
+    enabled: false
+    ingressClassName: ""
+    annotations: {}
+    hosts: []
+    tls: {}
+
   # -- set node selector
   nodeSelector: {}
 
