--- a/.github/workflows/ci-pr.yaml
+++ b/.github/workflows/ci-pr.yaml
@@ -48,19 +48,23 @@ jobs:
 
   check_version:
     runs-on: ubuntu-latest
+    strategy:
+      fail-fast: false
+      matrix:
+          chart: [broker-api, node]
     steps:
     - name: Checkout code
       uses: actions/checkout@v3
 
+    - name: Get all Charts that have changed
+      id: changed-files
+      uses: tj-actions/changed-files@v38
+      with:
+        files_yaml: |
+          chart:
+            - charts/${{ matrix.chart }}/**
+
     - name: Check Chart.yaml version
+      if: steps.changed-files.outputs.chart_any_changed == 'true'
       run: |
-        git fetch origin main:main
-        VERSION_PR=$(yq .version charts/node/Chart.yaml)
-        git checkout main
-        VERSION_MAIN=$(yq .version charts/node/Chart.yaml)
-        if [ "$VERSION_PR" == "$VERSION_MAIN" ]; then
-          echo "chart.yaml version has not been updated!"
-          exit 1
-        else
-          echo "chart.yaml version has been updated."
-        fi
+        bash ci/scripts/check_chart_yaml_version.sh ${{ matrix.chart }}
