--- a/.github/workflows/ci-pr.yaml
+++ b/.github/workflows/ci-pr.yaml
@@ -51,7 +51,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-          chart: [broker-api, node]
+          chart: [broker-api, node, lp-api]
     steps:
     - name: Checkout code
       uses: actions/checkout@v3
