--- a/charts/node/values.yaml
+++ b/charts/node/values.yaml
@@ -182,6 +182,15 @@ engine:
     # -- chainflip-engine p2p port
     ip: "8078"
 
+  metrics:
+    # -- enable prometheus metrics
+    enabled: false
+
+    # -- prometheus metrics port
+    port: 5566
+
+    # -- expose prometheus metrics
+    hostname: "0.0.0.0"
   # -- chainflip-engine healthcheck settings
   healthcheck:
     # -- enable chainflip-engine healthcheck
