feat: enable setting node port

--- a/charts/node/templates/engine-statefulset.yaml
+++ b/charts/node/templates/engine-statefulset.yaml
@@ -33,7 +33,7 @@ spec:
             - |
               set -x
               while true; do
-                nc -zv {{ include "chainflip-node.fullname" . }} {{ .Values.node.ports.rpc }}
+                nc -zv {{ include "chainflip-node.fullname" . }} {{ .Values.node.ports.rpc.port }}
                 if [ $? -eq 0 ]; then
                   exit 0
                 fi
@@ -53,18 +53,17 @@ spec:
           {{- toYaml . | nindent 12 }}
           {{- end }}
           ports:
-            - containerPort: {{ .Values.engine.ports.ip }}
+            - containerPort: {{ .Values.engine.ports.ip.port }}
               name: ip
               protocol: TCP
-            {{- if  .Values.engine.healthcheck.enabled }}
-            - containerPort: {{ .Values.engine.healthcheck.port }}
-              name: healthcheck
-            {{- end }}
-            {{- if .Values.engine.metrics.enabled }}
-            - containerPort: {{ .Values.engine.metrics.port }}
+            {{- if .Values.engine.ports.metrics.enabled }}
+            - containerPort: {{ .Values.engine.ports.metrics.port }}
               name: metrics
               protocol: TCP
             {{- end }}
+            {{- if  .Values.engine.ports.healthcheck.enabled }}
+            - containerPort: {{ .Values.engine.ports.healthcheck.port }}
+              name: healthcheck
           readinessProbe:
             httpGet:
               path: /health
@@ -83,6 +82,7 @@ spec:
             timeoutSeconds: 5
             successThreshold: 1
             failureThreshold: 3
+            {{- end }}
           {{- with .Values.engine.resources }}
           resources:
           {{- toYaml . | nindent 12 }}
