--- a/charts/node/templates/engine-cm.yaml
+++ b/charts/node/templates/engine-cm.yaml
@@ -1,5 +1,5 @@
 {{- if and (eq .Values.common.role "validator") (eq .Values.engine.settings.existingConfigMap "") }}
-{{- $node_endpoint := printf "ws://%s:%s" (include "chainflip-node.fullname" .) .Values.node.ports.rpc -}}
+{{- $node_endpoint := printf "ws://%s:%s" (include "chainflip-node.fullname" .) (.Values.node.ports.rpc.port | toString) -}}
 apiVersion: v1
 kind: ConfigMap
 metadata:
@@ -9,8 +9,8 @@ data:
     # Default configurations for the CFE
     [node_p2p]
     node_key_file = "{{ .Values.common.keys.keysPath }}/{{ .Values.common.keys.nodeKeyFileName }}"
-    ip_address = "{{ .Values.engine.settings.node_p2p.ip_address | required "You must set an IP address for the node_p2p section e.g. 172.20.220.1" }}"
-    port = {{ .Values.engine.ports.ip }}
+    ip_address = "{{ .Values.engine.settings.node_p2p.ip_address | required "You must set an IP address for the node_p2p section e.g. 172.20.220.1, 3.20.245.2" }}"
+    port = {{ .Values.engine.ports.ip.port }}
     allow_local_ip = {{ .Values.engine.settings.node_p2p.allow_local_ip }}
 
     [state_chain]
@@ -24,10 +24,10 @@ data:
     ws_node_endpoint = "{{ required "Please provide a ws_node_endpoint of an Ethereum node" .Values.engine.settings.eth.ws_node_endpoint }}"
     http_node_endpoint = "{{ required "Please provide a http_node_endpoint of an Ethereum node" .Values.engine.settings.eth.http_node_endpoint }}"
 
-    {{ if .Values.engine.healthcheck.enabled }}
+    {{ if .Values.engine.ports.healthcheck.enabled }}
     [health_check]
-    hostname = "{{ .Values.engine.healthcheck.hostname }}"
-    port = {{ .Values.engine.healthcheck.port }}
+    hostname = "{{ .Values.engine.ports.healthcheck.hostname }}"
+    port = {{ .Values.engine.ports.healthcheck.port }}
     {{- end }}
 
     [signing]
@@ -41,9 +41,10 @@ data:
     http_node_endpoint = "{{ required "Please provide a http_node_endpoint of an Bitcoin node" .Values.engine.settings.btc.http_node_endpoint }}"
     rpc_user = "{{ .Values.engine.settings.btc.rpc_user }}"
     rpc_password = "{{ .Values.engine.settings.btc.rpc_password }}"
-    {{- if .Values.engine.metrics.enabled }}
+
+    {{- if .Values.engine.ports.metrics.enabled }}
     [prometheus]
-    hostname = "{{ .Values.engine.metrics.hostname }}"
-    port = {{ .Values.engine.metrics.port }}
+    hostname = "{{ .Values.engine.ports.metrics.hostname }}"
+    port = {{ .Values.engine.ports.metrics.port }}
     {{- end }}
     {{- end }}
