--- a/charts/node/templates/engine-service.yaml
+++ b/charts/node/templates/engine-service.yaml
@@ -3,47 +3,68 @@ apiVersion: v1
 kind: Service
 metadata:
   name: {{ include "chainflip-engine.fullname" . }}
-  {{- with .Values.engine.service.annotations }}
+  {{- with .Values.engine.ports.ip.service.annotations }}
   annotations:
     {{- toYaml . | nindent 4 }}
   {{- end }}
   labels:
   {{- include "chainflip-engine.labels" . | nindent 4 }}
 spec:
-  type: {{ .Values.engine.service.type }}
-  clusterIP: {{ .Values.engine.settings.node_p2p.ip_address | required "You must set an IP address for the node_p2p section e.g. 172.20.220.1" }}
+  type: {{ .Values.engine.ports.ip.service.type }}
+  {{- if .Values.engine.settings.node_p2p.allow_local_ip }}
+  clusterIP: {{ .Values.engine.settings.node_p2p.ip_address }}
+  {{- end }}
   ports:
     - name: ip
-      port: {{ .Values.engine.ports.ip }}
+      port: {{ .Values.engine.ports.ip.port }}
       targetPort: ip
+      {{- if eq .Values.engine.ports.ip.service.type "NodePort" }}
+      nodePort: {{ .Values.engine.ports.ip.service.nodePort | default .Values.engine.ports.ip.port }}
+      {{- end }}
       protocol: TCP
-    {{- if .Values.engine.healthcheck.enabled }}
-    - name: healthcheck
-      port: {{ .Values.engine.healthcheck.port }}
-      targetPort: healthcheck
-      protocol: TCP
-    {{- end }}
   selector:
     {{- include "chainflip-engine.selectorLabels" . | nindent 4 }}
-{{- end }}
 ---
-{{- if .Values.engine.metrics.enabled }}
+{{- end }}
+{{- if .Values.engine.ports.metrics.enabled }}
 apiVersion: v1
 kind: Service
 metadata:
   name: {{ include "chainflip-engine.fullname" . }}-metrics
-  {{- with .Values.engine.metrics.service.annotations }}
+  {{- with .Values.engine.ports.metrics.service.annotations }}
   annotations:
     {{ . | toYaml | nindent 4 }}
   {{- end }}
   labels:
   {{- include "chainflip-engine.labels" . | nindent 4 }}
 spec:
-  type: {{ .Values.engine.metrics.service.type }}
+  type: {{ .Values.engine.ports.metrics.service.type }}
   ports:
     - name: metrics
-      port: {{ .Values.engine.metrics.port }}
+      port: {{ .Values.engine.ports.metrics.port }}
       targetPort: metrics
+      protocol: TCP
+  selector:
+  {{- include "chainflip-engine.selectorLabels" . | nindent 4 }}
+---
+{{- end }}
+{{- if .Values.engine.ports.healthcheck.enabled }}
+apiVersion: v1
+kind: Service
+metadata:
+  name: {{ include "chainflip-engine.fullname" . }}-healthcheck
+  {{- with .Values.engine.ports.healthcheck.service.annotations }}
+  annotations:
+    {{ . | toYaml | nindent 4 }}
+  {{- end }}
+  labels:
+  {{- include "chainflip-engine.labels" . | nindent 4 }}
+spec:
+  type: {{ .Values.engine.ports.healthcheck.service.type }}
+  ports:
+    - name: healthcheck
+      port: {{ .Values.engine.ports.healthcheck.port }}
+      targetPort: healthcheck
       protocol: TCP
   selector:
   {{- include "chainflip-engine.selectorLabels" . | nindent 4 }}
