--- a/charts/node/templates/node-statefulset.yaml
+++ b/charts/node/templates/node-statefulset.yaml
@@ -85,38 +85,48 @@ spec:
             - --blocks-pruning=archive
             - --state-pruning=archive
             {{- end }}
-            - --port={{ .Values.node.ports.p2p  }}
-            {{- if .Values.node.metrics.enabled }}
-            - --prometheus-port={{ .Values.node.metrics.port }}
-            {{- if .Values.node.metrics.expose }}
+            - --port={{ .Values.node.ports.p2p.port  }}
+            {{- if .Values.node.ports.metrics.enabled }}
+            - --prometheus-port={{ .Values.node.ports.metrics.port }}
+            {{- if .Values.node.ports.metrics.expose }}
             - --prometheus-external
             {{- end }}
             {{- end }}
             {{- if .Values.node.legacyRpc }}
             - --rpc-port=9933
-            - --ws-port={{ .Values.node.ports.rpc }}
+            - --ws-port={{ .Values.node.ports.rpc.port }}
             - --unsafe-ws-external
             {{- else }}
-            - --rpc-port={{ .Values.node.ports.rpc }}
+            - --rpc-port={{ .Values.node.ports.rpc.port }}
             {{- end }}
+            {{- if .Values.node.ports.rpc.expose }}
             - --rpc-cors=all
             - --rpc-methods=unsafe
             - --unsafe-rpc-external
+            {{- end }}
             {{- with .Values.node.extraArgs }}
             {{- toYaml . | nindent 12 }}
             {{- end }}
+          {{- with .Values.node.ports }}
+          {{- if or (.p2p.enabled) (.rpc.enabled) (.metrics.enabled) }}
           ports:
+            {{- if .rpc.enabled }}
             - name: rpc
-              containerPort: {{ .Values.node.ports.rpc }}
-              protocol: TCP
-            - name: p2p
-              containerPort: {{ .Values.node.ports.p2p }}
-              protocol: TCP
-            {{- if .Values.node.metrics.enabled }}
-            - name: metrics
-              containerPort: {{ .Values.node.metrics.port }}
+              containerPort: {{ .rpc.port }}
               protocol: TCP
             {{- end }}
+            {{- if .p2p.enabled }}
+            - name: p2p
+              containerPort: {{ .p2p.port }}
+              protocol: TCP
+            {{- end }}
+            {{- if .metrics.enabled }}
+            - name: metrics
+              containerPort: {{ .metrics.port }}
+              protocol: TCP
+            {{- end }}
+          {{- end }}
+          {{- end }}
           {{- with .Values.node.resources }}
           resources:
           {{- toYaml . | nindent 12 }}
